<resources>
    <string name="app_name">AsBolsyn</string>

    <string name="auth_phone_field_hint">Номер телефона</string>
    <string name="auth_send_code">Отправить код подтверждения</string>
    <string name="auth_sms_resend">Не получили код? Отправить еще раз</string>
    <string name="auth_sms_resend_suffix">Отправить еще раз</string>
    <string name="auth_phone_number_validation_error">Некорректный номер телефона</string>

    <string name="almaty_city">Алматы</string>
    <string name="restaurant_search_hint">Поиск ресторана</string>
    <string name="order_table">Забронировать стол</string>

    <string name="item_restaurants">Заведения</string>
    <string name="item_profile">Профиль</string>
    <string name="item_order">Бронирование</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="error">Ошибка</string>
    <string name="error_general">Извините, произошла ошибка. Попробуйте, пожалуйста, снова</string>
    <string name="ok">Хорошо</string>

    <string name="order_place">Забронировать столик</string>
    <string name="free_seats_fmt">Свободно столов: %1$d</string>
    <string name="choose_time">Выберите время</string>
    <string name="start_time">12:00</string>
    <string name="amount_of_guests">Количество гостей</string>
    <string name="default_amount_of_guests">1</string>
    <string name="maximum_amount_of_guests_fmt">Макс. количество гостей: %1$d</string>
    <string name="order">Забронировать</string>

    <string name="order_success">Вы успешно забронировали стол!</string>
    <string name="order_success_restaurant_fmt">Заведение: %1$s</string>
    <string name="order_success_date_fmt">Заведение: %1$s</string>
    <string name="order_success_room_fmt">Код для приглашения друзей: %1$s</string>
    <string name="navigate_to_orders">Перейти в раздел бронирования</string>

    <string name="order_number_fmt">Заказ %1$s</string>
    <string name="order_status_active">Активный</string>
    <string name="order_status_inactive">Завершен</string>
    <string name="guests_number_fmt">Гости: %1$d</string>
    <string name="order_restaurant_fmt">Заведение %1$s</string>
    <string name="my_orders">Мои заказы</string>
    <string name="order_details">Детали заказа</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="order_time_fmt">Время: %1$s, %2$s (%3$s)</string>
    <string name="checkout_menu"><u>Посмотреть выбранные блюда</u></string>
    <string name="guests">Гости</string>
    <string name="chosen_menu">Выбранные блюда</string>
    <string name="total_price">Итоговая стоимость</string>
    <string name="your_price">Нужно оплатить Вам</string>
    <string name="pay">Оплатить</string>
    <string name="pay_for_friends">Оплатить за друзей</string>
    <string name="download_fiscal_receipt">Фискальный чек</string>
    <string name="share">Поделиться</string>
    <string name="connect_to_room">Присоединиться по коду</string>
    <string name="enter_code">Введите код комнаты</string>
    <string name="connect">Присоединиться</string>
    <string name="add_food">Добавить в меню</string>
    <string name="restaurant_menu">Меню ресторана</string>

    <string name="my_profile">Мой профиль</string>
    <string name="profile_default_name">Daniyar Amangeldi</string>
    <string name="profile_default_login">asbolsyn.ie/estharossa</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="account_settings_description">Внесите изменения в свой аккаунт</string>
    <string name="auth_settings">Face ID / Touch ID</string>
    <string name="auth_settings_description">Управляйте безопасностью вашего устройства</string>
    <string name="security_settings">Двухфакторная аутентификация</string>
    <string name="security_settings_description">Дальнейшая защита вашей учетной записи для безопасности</string>
    <string name="logout">Выход</string>
    <string name="help">Помощь и поддержка</string>
    <string name="about">О приложении</string>
</resources>