<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/background_primary_rounded"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/pricing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:background="@color/border_color" />

    <FrameLayout
        android:id="@+id/total_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/total_price"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/color_text_main"
            android:textSize="16sp"
            tools:text="15000" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/your_price"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/your_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/color_text_main"
            android:textSize="16sp"
            tools:text="15000" />

    </FrameLayout>

    <CheckBox
        android:id="@+id/friends_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:buttonTint="@color/color_primary"
        android:text="@string/pay_for_friends"
        android:textColor="@color/color_primary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/background_primary_rounded_stroked"
            android:stateListAnimator="@null"
            android:text="@string/download_fiscal_receipt"
            android:textAllCaps="false"
            android:textColor="@color/color_primary"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/background_primary_light_rounded"
            android:stateListAnimator="@null"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/color_primary"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>