<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_bottom_sheet_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/order_table"
        android:textColor="@color/color_text_main"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_primary_light_rounded"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_icon_info" />

        <TextView
            android:id="@+id/available_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            android:textSize="14sp"
            tools:text="Сейчас свободен только 1 столик" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/choose_time"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/time_decrement"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_icon_minus" />

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/start_time"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/time_increment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_icon_plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/amount_of_guests"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/seat_decrement"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_icon_minus" />

        <TextView
            android:id="@+id/seat_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/default_amount_of_guests"
            android:textColor="@color/color_text_main"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/seat_increment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_icon_plus" />

    </LinearLayout>

    <TextView
        android:id="@+id/max_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/color_red"
        android:textSize="12sp"
        tools:text="Макс.количество гостей 5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_primary_rounded_solid"
        android:stateListAnimator="@null"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="16sp" />

</LinearLayout>